# wordParserFinder

./: CMakeLists.txt  README.md  ahoKorasik.cpp  ahoKorasik.h  main.cpp  parser.cpp  saddsad.cpp  trie.cpp
Headers/: ahoKorasik.h  lookForMatchesThread.h  mainWindow.h  parser.h  structTrie.h  trie.h
Sources/: ahoKorasik.cpp  lookForMatchesThread.cpp  main.cpp  mainWindow.cpp  parser.cpp  trie.cpp
